--- a/src/sass/module/_wpcf7.scss
+++ b/src/sass/module/_wpcf7.scss
@@ -4,9 +4,9 @@
     display: none;
 }
 
-.wpcf7-submit {
-    display: none;
-}
+// .wpcf7-submit {
+//     display: none;
+// }
 
 .wpcf7-checkbox {
     display: flex;
